Segundo avance (inicio timer)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-file.processor.separator:    
-file.processor.faul: F
-file.processor.origin: C:/files
+##Keep empty if you want blank/space or replace it by the correct
+file.processor.separator:    				
+##Expected element in case of failure (Case is not taken into account) 
+file.processor.faul: F			
+##Origin of the files to process			
+file.processor.origin: C:/files				
+##Time in milliseconds to review changes in loaded processes (The value must be an integer)
+process.completedAt.every: 2000				
