--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,8 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+	compile group: 'org.mockito', name: 'mockito-core', version: '2.13.0'
+	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 test {
