--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,11 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
-	compile group: 'org.mockito', name: 'mockito-core', version: '2.13.0'
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testRuntimeOnly("org.junit.platform:junit-platform-launcher:1.5.2")
+	testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.2.0")
+	testRuntimeOnly("org.junit.vintage:junit-vintage-engine:5.2.0")
+	testCompile "org.mockito:mockito-core:2.22.0"
+    testCompile('org.mockito:mockito-junit-jupiter:2.18.3')
 }
 
 test {
