--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,9 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.5'
+	compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.5'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.h2database:h2'
-	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 	testRuntimeOnly("org.junit.platform:junit-platform-launcher:1.5.2")
 	testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.2.0")
 	testRuntimeOnly("org.junit.vintage:junit-vintage-engine:5.2.0")
@@ -36,3 +33,15 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
+task fatJar(type: Jar) {
+	manifest {
+        attributes 'Implementation-Title': 'Gradle Jar File',  
+        	'Implementation-Version': version,
+        	'Main-Class': 'com.jaxon.bowling'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
