--- a/build.gradle
+++ b/build.gradle
@@ -20,28 +20,18 @@ repositories {
 }
 
 dependencies {
-	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.5'
-	compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.5'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	testRuntimeOnly("org.junit.platform:junit-platform-launcher:1.5.2")
-	testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.2.0")
-	testRuntimeOnly("org.junit.vintage:junit-vintage-engine:5.2.0")
+	compile 'org.slf4j:slf4j-api:1.7.5'
+	compile 'org.slf4j:slf4j-log4j12:1.7.5'
+	compile 'org.springframework.boot:spring-boot-devtools'
+	testCompile 'junit:junit:4.12'
+	testCompile("org.junit.platform:junit-platform-launcher:1.5.2")
+	testCompile("org.junit.jupiter:junit-jupiter-engine:5.2.0")
+	testCompile("org.junit.vintage:junit-vintage-engine:5.2.0")
 	testCompile "org.mockito:mockito-core:2.22.0"
     testCompile('org.mockito:mockito-junit-jupiter:2.18.3')
 }
 
 test {
 	useJUnitPlatform()
-}
-
-task fatJar(type: Jar) {
-	manifest {
-        attributes 'Implementation-Title': 'Gradle Jar File',  
-        	'Implementation-Version': version,
-        	'Main-Class': 'com.jaxon.bowling'
-    }
-    baseName = project.name + '-all'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
 }
 
